--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,43 @@
 /*la police est sans-serif pour tout le document*/
-html{
-    font-family: sans-serif;
-   background-color: #fff3db;
+html {
+  font-family: sans-serif;
+  background-color: #fff3db;
 }
 /* h1 */
-h1{
-   color: white;
-   background-color: #f02425;
-   text-align: center;
-   font-size:5em;
+h1 {
+  color: white;
+  background-color: #f02425;
+  text-align: center;
+  font-size: 5em;
 }
-h2{
-    color: #f02425;
-    text-align: center;
+h2 {
+  color: #f02425;
+  text-align: center;
 }
-h3{
-    text-align: center;
-    text-decoration: underline;
-    font-weight: lighter;
-    font-style: italic;
+h3 {
+  text-align: center;
+  text-decoration: underline;
+  font-weight: lighter;
+  font-style: italic;
 }
-strong{
-    color:#f02425;
+strong {
+  color: #f02425;
 }
-span{
-    color: #f02425;
+span {
+  color: #f02425;
 }
-a{
-    font-weight: bold;
-    color:#3e8fd6 ;
-    text-decoration: underline;
-    font-weight: 2em;
+
+a {
+  font-weight: bold;
+  color: #3A97D9;
+  text-decoration: underline;
+  font-weight: 2em;
+}
+/* Méga bonus */
+.astuce {
+  color: #666666;
+  background-color: #fed48a;
+  font-weight: bold;
+  text-align: center;
+  font-style: italic;
 }
