--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a {
   font-weight: 2em;
 }
 /* Méga bonus */
-.astuce {
+.trick {
   color: #666666;
   background-color: #fed48a;
   font-weight: bold;
